--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
+    "google-auth-library": "^9.6.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.10",
-    "nodemon": "^3.0.3"
+    "nodemailer": "^6.9.12",
+    "nodemon": "^3.0.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "engines": {
     "node": ">=18.18.0 <19.0.0"
